# nqrduck-broadband

./: CHANGELOG.md  README.md  pyproject.toml
src/: broadband.py  broadband_controller.py  broadband_view.py  broadband_widget.py
src/Broadband/resources/: broadband.ini
src/nqrduck-broadband/: broadband.py  broadband_controller.py
src/nqrduck_broadband/: broadband.py  broadband_controller.py  broadband_view.py  broadband_widget.py  controller.py  model.py  module.py  view.py  widget.py
src/nqrduck_broadband/resources/: broadband.ini  broadband_widget.ui
src/resources/: broadband_widget.ui
