[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nqrduck-broadband"
version = "0.0.7"
authors = [
  { name="Julia Pfitzer", email="git@jupfi.me" },
]

description = "A module for the NQRduck program (a simple python script™) to do broadband NQR measurements."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "matplotlib",
    "pyqt5",
    "NQRduck",
]

